refactor: replace manual dot clamping with Math.clamp